--- a/angular.client/src/app/modules/admin/evaluation/components/questionary/questionary.component.html
+++ b/angular.client/src/app/modules/admin/evaluation/components/questionary/questionary.component.html
@@ -80,34 +80,32 @@
                     Página {{ paginator.pageNumber }} de {{ paginator.pages }}
                 </span>
             </div>
-
-            @for(question of filterQuestions(); track question){
-            <mat-card>
-                <mat-card-content class="grid gap-4">
-                    <div class="font-medium">
-                        {{ question.index }}. {{ question.name }}
-                    </div>
-                    <div>
-                        <mat-radio-group
-                            (change)="radioChange($event.value, question.id)"
-                            aria-label="Select an option"
-                            class="flex flex-col"
-                            [(ngModel)]="
-                                questions[question.index - 1]['answer']
-                            "
-                        >
-                            @for(option of itemOptions; track option){
-                            <mat-radio-button [value]="option.value">
-                                {{ option.name }}
-                            </mat-radio-button>
-                            }
-                        </mat-radio-group>
-                    </div>
-                </mat-card-content>
-            </mat-card>
-            } @empty {
             <div class="p-4 flex flex-col gap-4">
-                @for(item of [1, 2, 3]; track item){
+                @for(question of filterQuestions(); track question){
+                <mat-card>
+                    <mat-card-content class="grid gap-4">
+                        <div class="font-medium">
+                            {{ question.order }}. {{ question.text }}
+                        </div>
+                        <div>
+                            <mat-radio-group
+                                (change)="
+                                    radioChange($event.value, question.id)
+                                "
+                                aria-label="Select an option"
+                                class="flex flex-col"
+                                [(ngModel)]="question.answer"
+                            >
+                                @for(option of itemOptions; track option){
+                                <mat-radio-button [value]="option.value">
+                                    {{ option.name }}
+                                </mat-radio-button>
+                                }
+                            </mat-radio-group>
+                        </div>
+                    </mat-card-content>
+                </mat-card>
+                } @empty { @for(item of [1, 2, 3]; track item){
                 <mat-card>
                     <mat-card-content class="grid gap-4">
                         <div class="flex flex-col gap-1">
@@ -132,9 +130,8 @@
                         </div>
                     </mat-card-content>
                 </mat-card>
-                }
+                } }
             </div>
-            }
 
             <div class="flex justify-between items-end w-full">
                 <div class="flex gap-4">
