--- a/angular.client/src/app/layout/common/user/user.component.html
+++ b/angular.client/src/app/layout/common/user/user.component.html
@@ -14,7 +14,7 @@
 <mat-menu [xPosition]="'before'" #userActions="matMenu">
     <button mat-menu-item>
         <span class="flex flex-col leading-none">
-            <span>Signed in as</span>
+            <span>Usuario: </span>
             <span class="mt-1.5 text-md font-medium">{{user.email}}</span>
         </span>
     </button>
@@ -34,7 +34,7 @@
     <mat-divider class="my-2"></mat-divider>
     <button mat-menu-item (click)="signOut()">
         <mat-icon [svgIcon]="'heroicons_outline:arrow-right-on-rectangle'"></mat-icon>
-        <span>Sign out</span>
+        <span>Cerrar sesión</span>
     </button>
 </mat-menu>
 
