--- a/angular.client/src/app/modules/admin/reports/classroom-report/classroom-report.component.html
+++ b/angular.client/src/app/modules/admin/reports/classroom-report/classroom-report.component.html
@@ -80,7 +80,7 @@
                         Filtrar
                     </button>
                     <button mat-fab extended (click)="exportarExcel_resultadosPsicologicosAula()"
-                        [disabled]="!selectedUnity || !selectedDegree || !selectedSection || !selectedDimension || !(studentsClassroom && studentsClassroom.length)">
+                        [disabled]="!selectedUnity || !selectedDegree || !selectedSection || !selectedDimension || !(dataSource.data && dataSource.data.length)">
                         <mat-icon svgIcon="heroicons_outline:document"></mat-icon>
                         Excel
                     </button>
@@ -106,7 +106,7 @@
                 </div>
             </div>
             }
-            @else if (studentsClassroom.length == 0 && this.selectedClassroomEvaluationId) {
+            @else if (dataSource.data.length == 0 && this.selectedClassroomEvaluationId) {
             <div
                 class="max-w-md mx-auto bg-orange-100 border-orange-500 rounded-xl shadow-md overflow-hidden md:max-w-2xl m-4">
                 <div class="md:flex">
@@ -119,62 +119,65 @@
                 </div>
             </div>
             }
-            @else if(studentsClassroom.length > 0){
-            <div class="relative overflow-x-auto shadow-md sm:rounded-lg">
-                <table>
-                    <thead>
-                        <tr>
-                            <th scope="col">Nombre Completo</th>
-                            <th scope="col">Indicador</th>
-                            <th scope="col">Estado evalución</th>
-                            <th scope="col" class="text-center">Opcion</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        @for( student of studentsClassroom; track student; let i
-                        = $index){
-                        <tr>
-                            <th scope="row">{{ student.nombre }}</th>
-                            <!-- Estado Estudiante -->
-                            <td class="inline-flex items-center justify-center font-bold text-xs px-2.5 py-0.5 rounded-full tracking-wide uppercase"
-                                [ngClass]="{'bg-red-200 text-red-800 dark:bg-red-600 dark:text-red-50': student.estadoEvaluacionEstudiante === 'F',
-                                                                        'bg-gray-200 text-gray-800 dark:bg-gray-600 dark:text-gray-50': student.estadoEvaluacionEstudiante === 'N',
-                                                                        'bg-green-200 text-green-800 dark:bg-green-600 dark:text-green-50': student.estadoEvaluacionEstudiante === 'P'}">
+            @else if(dataSource.data.length > 0){
+            <div class="xl:col-span-2 flex flex-col flex-auto bg-card shadow rounded-2xl overflow-hidden">
+                <div class="p-6">
+                    <div class="mr-4 text-lg font-medium tracking-tight leading-6 truncate"> Estudiantes que realizaron
+                        el test psicologico</div>
+                    <div class="text-secondary font-medium flex row">
+                        <p>En total hay {{this.dataSource.data.length}} estudiantes,&nbsp; </p>
+                        <p class="text-green-700"> {{getEstudiantesPorEstado('F')}} terminaron,&nbsp;</p>
+                        <p class="text-orange-400">{{getEstudiantesPorEstado('P')}} estan desarrollando,&nbsp; </p>
+                        <p class="text-gray-400"> {{getEstudiantesPorEstado('N')}} no comenzaron. </p>
+                    </div>
+                </div>
+                <div class="overflow-x-auto mx-6" (click)="this.dataSource.sort = this.estudiantesTableMatSort">
+                    <table mat-table [dataSource]="dataSource" matSort #estudiantesTable class="mat-elevation-z8">
+
+                        <!-- Nombre Column -->
+                        <ng-container matColumnDef="nombre">
+                            <th mat-header-cell *matHeaderCellDef mat-sort-header>Nombre</th>
+                            <td mat-cell *matCellDef="let element"> {{element.nombre}} </td>
+                        </ng-container>
+
+                        <!-- Estado Evaluacion Estudiante Column -->
+                        <ng-container matColumnDef="estadoEvaluacionEstudiante">
+                            <th mat-header-cell *matHeaderCellDef mat-sort-header>Estado Evaluacion</th>
+                            <td mat-cell *matCellDef="let element" class="font-bold text-base" [ngClass]="{
+                                    'text-red-800': element.estadoEvaluacionEstudiante === 'F',
+                                    'text-gray-800': element.estadoEvaluacionEstudiante === 'N',
+                                    'text-green-700': element.estadoEvaluacionEstudiante === 'P'
+                                }">
                                 <span class="leading-relaxed whitespace-nowrap">
-                                    {{student.estadoEvaluacionEstudiante === 'F' ? 'Terminado' :
-                                    student.estadoEvaluacionEstudiante === 'N' ? 'No iniciado' :
-                                    student.estadoEvaluacionEstudiante === 'P' ? 'En proceso' : ''}}
+                                    {{element.estadoEvaluacionEstudiante === 'F' ? 'Terminado' :
+                                    element.estadoEvaluacionEstudiante === 'N' ? 'No iniciado' :
+                                    element.estadoEvaluacionEstudiante === 'P' ? 'En proceso' : ''}}
                                 </span>
                             </td>
-                            <!-- Promedio del estudiante -->
-                            <td>
-                                @if(student.promedio == 0){ No realizado }
-                                @else{
-                                <div [className]="
-                            getMeanClasses(student.promedio) +
-                            ' px-2 py-2 rounded text-base flex items-center justify-center text-center'
-                        ">
-                                    {{getConceptoDeResultadosPsi(student.promedio)}} ({{ student.promedio | number :
-                                    ".1-1" }})
-                                </div>
-                                }
-                            </td>
-
-
-                            <td class="text-center">
-                                <button [disabled]="student.mean == 0" mat-icon-button
-                                    (click)="redirectStudent(student.id)">
+                        </ng-container>
+                        <!-- Promedio Column -->
+                        <ng-container matColumnDef="promedio">
+                            <th mat-header-cell *matHeaderCellDef mat-sort-header>Promedio</th>
+                            <td mat-cell *matCellDef="let element"> {{element.promedio | number:'1.1-1'}} </td>
+                        </ng-container>
+                        <!-- Opciones Column -->
+                        <ng-container matColumnDef="opciones">
+                            <th mat-header-cell *matHeaderCellDef>Opciones</th>
+                            <td mat-cell *matCellDef="let element">
+                                <button [disabled]="element.mean == 0" mat-icon-button
+                                    (click)="redirectStudent(element.id)">
                                     <mat-icon>visibility</mat-icon>
                                 </button>
+                                {{element.id}}
                             </td>
-                        </tr>
-                        }
-                    </tbody>
-                </table>
-            </div>
-            <!-- #endregion -->
-            }
+                        </ng-container>
 
+                        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+                    </table>
+                </div>
+            </div>
+            }
         </div>
     </div>
     <!-- #endregion -->
