--- a/angular.client/src/app/modules/admin/evaluation/components/questionary/questionary.component.html
+++ b/angular.client/src/app/modules/admin/evaluation/components/questionary/questionary.component.html
@@ -117,7 +117,7 @@
                             ></div>
                         </div>
                         <div class="flex flex-col gap-2">
-                            @for(ii of [1, 2, 3, 4, 5]; track ii){
+                            @for(ii of [1, 2, 3, 4]; track ii){
                             <div class="flex items-center gap-4">
                                 <div
                                     class="rounded-full w-6 h-6 bg-gray-200 animate-pulse"
