--- a/angular.client/src/app/modules/admin/classrooms/classrooms.component.html
+++ b/angular.client/src/app/modules/admin/classrooms/classrooms.component.html
@@ -122,7 +122,7 @@
                                 </mat-form-field>
                                 <button mat-button
                                     [class]="getEstadoPruebaPsicologicaAula(estadoEvalucionPsicologicaAula).class"
-                                    (click)="openUpdateEstadoEvaPsiAulaModal()">
+                                    (click)="openUpdateEstadoEvaPsiAulaModal(getEstadoPruebaPsicologicaAula(estadoEvalucionPsicologicaAula).text)">
                                     {{ getEstadoPruebaPsicologicaAula(estadoEvalucionPsicologicaAula).text }}
                                 </button>
                             </div>
@@ -132,6 +132,9 @@
                                 class="sm:col-span-6 flex flex-col flex-auto p-6 bg-card shadow rounded-2xl overflow-hidden">
                                 <div class="text-lg font-medium tracking-tight leading-6 truncate">Detalles de los
                                     estudiantes</div>
+                                <div class="text-secondary font-medium flex row">
+                                    <p>En total hay {{classroomStudents.length}} estudiantes.</p>
+                                </div>
                                 <div class="flex flex-col flex-auto mt-2">
                                     <table class="w-full overflow-y-visible" mat-table
                                         [dataSource]="filteredStudents && filteredStudents.length > 0 ? filteredStudents : classroomStudents">
