--- a/angular.client/src/app/modules/admin/evaluation/components/questionary-list/questionary-list.component.html
+++ b/angular.client/src/app/modules/admin/evaluation/components/questionary-list/questionary-list.component.html
@@ -92,6 +92,14 @@
                     </button> </mat-card-actions
                 >}
             </mat-card>
+            } @empty {
+            <mat-card class="col-span-4">
+                <mat-card-content>
+                    <div class="text-center">
+                        No hay cuestionarios disponibles
+                    </div>
+                </mat-card-content>
+            </mat-card>
             }
         </div>
     </div>
