--- a/angular.client/src/app/modules/admin/evaluation/components/questionary-list/questionary-list.component.html
+++ b/angular.client/src/app/modules/admin/evaluation/components/questionary-list/questionary-list.component.html
@@ -70,18 +70,22 @@
                             [ngClass]="
                                 questionary.estado == 'N'
                                     ? 'bg-red-600'
+                                    : questionary.estado == 'P'
+                                    ? 'bg-yellow-600'
                                     : 'bg-green-600'
                             "
                         >
                             {{
                                 questionary.estado == "N"
                                     ? "Inconclusa"
+                                    : questionary.estado == "P"
+                                    ? 'Proceso'
                                     : "Completada"
                             }}
                         </span>
                     </div>
                 </mat-card-content>
-                @if( questionary.estado == "N" ){
+                @if( questionary.estado == "N" || questionary.estado == "P"){
 
                 <mat-card-actions>
                     <button
