todo funciona bien

--- a/angular.client/src/app/modules/admin/evaluation/components/questionary-list/questionary-list.component.html
+++ b/angular.client/src/app/modules/admin/evaluation/components/questionary-list/questionary-list.component.html
@@ -1,50 +1,32 @@
-<div
-    class="absolute inset-0 flex flex-col min-w-0 overflow-y-auto"
-    cdkScrollable
-    #parentSection
->
+<div class="absolute inset-0 flex flex-col min-w-0 overflow-y-auto" cdkScrollable #parentSection>
     <!-- Header -->
     <div
-        class="flex flex-col sm:flex-row flex-0 sm:items-center sm:justify-between p-6 sm:py-8 sm:px-10 border-b bg-card dark:bg-transparent"
-    >
+        class="flex flex-col sm:flex-row flex-0 sm:items-center sm:justify-between p-6 sm:py-8 sm:px-10 border-b bg-card dark:bg-transparent">
         <div class="flex-1 min-w-0">
             <!-- Breadcrumbs -->
             <div>
                 <div class="hidden sm:flex flex-wrap items-center font-medium">
                     <div>
-                        <a class="whitespace-nowrap text-primary-500"
-                            >Dashboard</a
-                        >
+                        <a class="whitespace-nowrap text-primary-500">Dashboard</a>
                     </div>
 
                     <div class="flex items-center ml-1 whitespace-nowrap">
-                        <mat-icon
-                            class="icon-size-5 text-secondary"
-                            [svgIcon]="'heroicons_solid:chevron-right'"
-                        ></mat-icon>
-                        <span class="ml-1 text-secondary"
-                            >Evaluación Psicológica</span
-                        >
+                        <mat-icon class="icon-size-5 text-secondary"
+                            [svgIcon]="'heroicons_solid:chevron-right'"></mat-icon>
+                        <span class="ml-1 text-secondary">Evaluación Psicológica</span>
                     </div>
                 </div>
                 <div class="flex sm:hidden">
-                    <a
-                        class="inline-flex items-center -ml-1.5 text-secondary font-medium"
-                        [routerLink]="'./..'"
-                    >
-                        <mat-icon
-                            class="icon-size-5 text-secondary"
-                            [svgIcon]="'heroicons_solid:chevron-left'"
-                        ></mat-icon>
+                    <a class="inline-flex items-center -ml-1.5 text-secondary font-medium" [routerLink]="'./..'">
+                        <mat-icon class="icon-size-5 text-secondary"
+                            [svgIcon]="'heroicons_solid:chevron-left'"></mat-icon>
                         <span class="ml-1">Regresar</span>
                     </a>
                 </div>
             </div>
             <!-- Title -->
             <div class="mt-2">
-                <h2
-                    class="text-3xl md:text-4xl font-extrabold tracking-tight leading-7 sm:leading-10 truncate"
-                >
+                <h2 class="text-3xl md:text-4xl font-extrabold tracking-tight leading-7 sm:leading-10 truncate">
                     Evaluaciones
                 </h2>
             </div>
@@ -65,22 +47,19 @@
                     </div>
                     <div>
                         Estado:
-                        <span
-                            class="px-2 py-1 text-white rounded shadow text-xs"
-                            [ngClass]="
+                        <span class="px-2 py-1 text-white rounded shadow text-xs" [ngClass]="
                                 questionary.estado == 'N'
                                     ? 'bg-red-600'
                                     : questionary.estado == 'P'
                                     ? 'bg-yellow-600'
                                     : 'bg-green-600'
-                            "
-                        >
+                            ">
                             {{
-                                questionary.estado == "N"
-                                    ? "Inconclusa"
-                                    : questionary.estado == "P"
-                                    ? 'Proceso'
-                                    : "Completada"
+                            questionary.estado == "N"
+                            ? "Inconclusa"
+                            : questionary.estado == "P"
+                            ? 'En Proceso'
+                            : "Completada"
                             }}
                         </span>
                     </div>
@@ -88,13 +67,9 @@
                 @if( questionary.estado == "N" || questionary.estado == "P"){
 
                 <mat-card-actions>
-                    <button
-                        mat-button
-                        (click)="goToQuestionary(questionary.id)"
-                    >
+                    <button mat-button (click)="goToQuestionary(questionary.id)">
                         Realizar
-                    </button> </mat-card-actions
-                >}
+                    </button> </mat-card-actions>}
             </mat-card>
             } @empty {
             <mat-card class="col-span-4">
